	Fixed bug where anchor elements with names wasn't properly collapsed as they where in 3.3.x.
	Fixed bug where WebKit wouldn't properly handle image selection if it was done left to right.
	Fixed bug where the formatter would align images when the selection range was collapsed.
	Fixed bug where the image button would be active when the selection range was collapsed.
	Fixed so the drop menus doesn't get an outline border visible when focused, patch contributed by Ephox.
	Fixed so the values entered in the color picker are forced to hex values.
	Removed dialog workaround for IE 9 beta since the RC is now out and people should upgrade.
	Removed obsolete calls in various plugins to the mceBeginUndoLevel command.
Version 3.4b3 (2011-02-10)
	Added WAI-ARIA support for the main UI and dialogs this feature was contributed by Ephox.
	Added iframe support to media plugin in order to handle the new YouTube HTML5 video formats.
	Fixed bug where anchors would wrap the text contents after it due to a bug in the DomParser logic.
	Fixed bug where the selected state wouldn't be removed on ListBox controls when a menu item was selected.
	Fixed bug where IE could throw an unspecified error exception when the getBookmark logic was executed.
	Fixed bug where IE would throw an invalid argument error when focus was applied to an empty editor instance.
	Fixed bug where applying inline format wouldn't work if the start cell in the selection was empty.
	Fixed bug where auto detection logic for YouTube and Google Video wouldn't work in the new media plugin.
	Fixed bug where td elements would get a colspan/rowspan of 1 when created by the table plugin.
	Fixed bug where removal/padding of empty elements wasn't handled correctly.
	Fixed bug where internal elements would show up in element path.
	Fixed bug where internal elements would get serialized as valid output.
	Fixed bug where color wasn't correctly applied to anchor elements.